# radar-wall-optimizer

./: .gitignore  README.md  fdtd_2d.py  genetic_algorithm.py  live_demo.py  main.py  pyproject.toml  requirements.txt  rl_optimizer.py  run.py  visualization.py
report/: bibliography.bib  rapport.aux  rapport.bbl  rapport.blg  rapport.out  rapport.tex  rapport.toc  report.aux  report.fdb_latexmk  report.fls  report.out  report.tex  report.toc
results/: best_ga_result.npz
scripts/: live_demo.py  run_20min.py  run_ga_20min.py  run_optimization.py  run_overnight.py  run_rapport.py  run_validation.py
src/: __init__.py
src/fdtd/: __init__.py  config.py  core.py  materials.py  ntff.py  pml.py  tfsf.py
src/optim/: __init__.py  cmaes.py  fitness.py  genetic.py  rl_agent.py
src/utils/: console.py  xp.py
src/validation/: convergence.py
src/viz/: __init__.py  animation.py  dashboard.py  plots.py
tests/: test_fdtd.py  test_ga.py  test_ntff.py
